# autoutils-log

./: README.md  pyproject.toml
autoutils_log/: __init__.py  base.py  colorful_stream_handler.py  kafka_handler.py  logstash_handler.py
